服务端开始写

--- a/public/sprite.html
+++ b/public/sprite.html
@@ -37,34 +37,34 @@
             <div class="sprite-tab-swiper swiper-container">
                 <ul class="swiper-wrapper">
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="on">全部</a>
+                        <a href="javascript:;" class="on">全部</a>
                     </li>
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="">上古三门</a>
+                        <a href="javascript:;" class="">上古三门</a>
                     </li>
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="">最初的伙伴</a>
+                        <a href="javascript:;" class="">最初的伙伴</a>
                     </li>
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="">四海志</a>
+                        <a href="javascript:;" class="">四海志</a>
                     </li>
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="">四海志传奇</a>
+                        <a href="javascript:;" class="">四海志传奇</a>
                     </li>
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="">古怪集</a>
+                        <a href="javascript:;" class="">古怪集</a>
                     </li>
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="">古怪集传奇</a>
+                        <a href="javascript:;" class="">古怪集传奇</a>
                     </li>
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="">青丘录</a>
+                        <a href="javascript:;" class="">青丘录</a>
                     </li>
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="">神武道</a>
+                        <a href="javascript:;" class="">神武道</a>
                     </li>
                     <li class="swiper-slide  swiper-slide-visible swiper-slide-active">
-                        <a href="#" class="">英雄会</a>
+                        <a href="javascript:;" class="">英雄会</a>
                     </li>
                 </ul>
             </div>
@@ -73,7 +73,7 @@
         <div class="grid-tab-hd">
             <ul class="sprite-list clearfix">
                 <li class="t-sgsm">
-                    <a href="#" class="d-spr sprite-img">
+                    <a href="javascript:;" class="d-spr sprite-img">
                         <img src="img/pet/sn-sm.png" alt="">
                     </a>
                     <p>狻猊</p>
@@ -137,6 +137,7 @@
         </div>
     </div>
 </body>
+<script src="js/jquery-1.11.3.js"></script>
 <script src="js/swiper.min.js"></script>
 <script>
     var swiper = new Swiper('.sprite-tab-swiper', {
