--- a/public/news.html
+++ b/public/news.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 
-<body onload='news_search("最新")'>
+<body >
 
     <!-- 导航栏  -->
     <nav>
@@ -41,10 +41,10 @@
         <div class="tab-c comm-tab">
             <a href="" class='tab-prev prev spr text-hide'>上一个</a>
             <ul class='tab-hd'>
-                <li class='tab-item on'><a href="javascript:news_search('最新')" class='d-spr text-hide f-1-2 t-zx'>最新</a></li>
-                <li class='tab-item'><a href="javascript:news_search('新闻')" class='d-spr text-hide f-1-2 t-xw'>新闻</a></li>
-                <li class='tab-item'><a href="javascript:news_search('公告')" class='d-spr text-hide f-1-2 t-gg'>公告</a></li>
-                <li class='tab-item'><a href="javascript:news_search('活动')" class='d-spr text-hide f-1-2 t-hd'>活动</a></li>
+                <li class='tab-item on'><a href="javascript:;" class='d-spr text-hide f-1-2 t-zx'>最新</a></li>
+                <li class='tab-item'><a href="javascript:;" class='d-spr text-hide f-1-2 t-xw'>新闻</a></li>
+                <li class='tab-item'><a href="javascript:;" class='d-spr text-hide f-1-2 t-gg'>公告</a></li>
+                <li class='tab-item'><a href="javascript:;" class='d-spr text-hide f-1-2 t-hd'>活动</a></li>
             </ul>
             <a href="" class='tab-next next spr text-hide'>下一个</a>
         </div>
@@ -109,34 +109,38 @@
         </div>
     </div>
 </body>
-
+<script src="js/jquery-1.11.3.js"></script>
 <script>
-    function news_search(data) {
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-            if (xhr.readyState == 4 && xhr.status == 200) {
-                var result = xhr.responseText;
-                var obj = JSON.parse(result);
-
-                var col_news = document.getElementById('news_item');
+    $(".inner-con .tab-hd a").click(function(){
+        $(this).parent().addClass("on").siblings().removeClass("on");
+        newAjax($(this).html());
+    })
+    function newAjax(news_sort){
+        $.ajax({
+            url:'/news/all',
+            data:{
+                news_sort
+            },
+            type:'get',
+            success:function(result){
+                console.log(result);
+                var obj=result;
                 var col_html = '<ul class="col-news">';
                 for (var key in obj) {
                     obj[key].news_date = obj[key].news_date.slice(0, 10);
                     console.log(obj[key].news_date);
                     col_html += `<li>
 							<span class=\'time\'>${obj[key].news_date}</span>
-							<a href=\"#\">「${data}」${obj[key].news_cont}</a>
+							<a href=\"#\">「${news_sort}」${obj[key].news_cont}</a>
 						</li>`
                 }
-                col_html += '</ul>'
-                console.log(col_news);
-                col_news.innerHTML = col_html;
+                col_html += '</ul>';
+                $("#news_item").html(col_html);
+
             }
-        }
-        var formdata = 'news_sort=' + data;
-        xhr.open('get', '/news/all?' + formdata, true);
-        xhr.send();
+        })
     }
+    newAjax("最新");
 </script>
 
 </html>
