--- a/public/activity.html
+++ b/public/activity.html
@@ -11,7 +11,7 @@
     <!-- 导航栏  -->
     <nav>
         <div class='nav-logo'>
-            <a href="#" class='login-hide'></a>
+            <a href="javascript:;" class='login-hide'></a>
         </div>
         <ul class='nav-list'>
             <li><a href="index.html">官方首页<span class='list-name'>HOME</span></a></li>
@@ -49,32 +49,32 @@
         <div class="foot-list">
             <ul class="list-cont">
                 <li class="list-item">
-                    <a href="#" target="_blank">腾讯互动娱乐</a>
+                    <a href="javascript:;" target="_blank">腾讯互动娱乐</a>
                     <span class="f_line">|</span>
-                    <a href="#" target="_blank">服务条款</a>
+                    <a href="javascript:;" target="_blank">服务条款</a>
                     <span class="f_line">|</span>
-                    <a href="#" target="_blank">腾讯游戏隐私保护指引</a>
+                    <a href="javascript:;" target="_blank">腾讯游戏隐私保护指引</a>
                     <span class="f_line">|</span>
-                    <a href="#" target="_blank">腾讯游戏招聘</a>
+                    <a href="javascript:;" target="_blank">腾讯游戏招聘</a>
                     <span class="f_line">|</span>
-                    <a href="#" target="_blank">腾讯游戏客服</a>
+                    <a href="javascript:;" target="_blank">腾讯游戏客服</a>
                     <span class="f_line">|</span>
-                    <a href="#" target="_blank">游戏地图</a>
+                    <a href="javascript:;" target="_blank">游戏地图</a>
                     <span class="f_line">|</span>
-                    <a href="#" target="_blank">商务合作</a>
+                    <a href="javascript:;" target="_blank">商务合作</a>
                     <span class="f_line">|</span>
-                    <a href="#" target="_blank">腾讯网</a>
+                    <a href="javascript:;" target="_blank">腾讯网</a>
                     <span class="f_line">|</span>
-                    <a href="#" target="_blank">网站导航</a>
+                    <a href="javascript:;" target="_blank">网站导航</a>
                 </li>
                 <li class="list-item">
-                    <a target="_blank" href="#">腾讯公司版权所有</a>
+                    <a target="_blank" href="javascript:;">腾讯公司版权所有</a>
                 </li>
                 <li class="list-item">
-                    <a target="_blank" href="#">COPYRIGHT © 1998 - 2019 TENCENT. ALL RIGHTS RESERVED.</a>
+                    <a target="_blank" href="javascript:;">COPYRIGHT © 1998 - 2019 TENCENT. ALL RIGHTS RESERVED.</a>
                 </li>
                 <li class="list-item">
-                    <a target="_blank" href="#">粤网文[2017]6138-1456号|（总）网出证（粤）字第057号</a>
+                    <a target="_blank" href="javascript:;">粤网文[2017]6138-1456号|（总）网出证（粤）字第057号</a>
                 </li>
 
             </ul>
