--- a/public/index.html
+++ b/public/index.html
@@ -135,20 +135,20 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus tenetur quibusdam eaque beatae quas
                 expedita rerum laborum quo ex fuga.
             </p>
-            <a href="#" class='fairy-more-btn spr'>查看更多</a>
+            <a href="javascript:;" class='fairy-more-btn spr'>查看更多</a>
             <img class='fairy-img' src="img/038e48c9109d009b42e3d3cd1561382c.png" alt="">
             <!--  定位的分类-->
             <div class="fairy-class">
-                <a href="#" class="fairy-class-item on">全部</a>
-                <a href="#" class="fairy-class-item">上古三门</a>
-                <a href="#" class="fairy-class-item">最初的伙伴</a>
-                <a href="#" class="fairy-class-item">四海志</a>
-                <a href="#" class="fairy-class-item">四海志传奇</a>
-                <a href="#" class="fairy-class-item">古怪集</a>
-                <a href="#" class="fairy-class-item">古怪集传奇</a>
-                <a href="#" class="fairy-class-item">青丘录</a>
-                <a href="#" class="fairy-class-item">神武道</a>
-                <a href="#" class="fairy-class-item">英雄会</a>
+                <a href="javascript:;" class="fairy-class-item on">全部</a>
+                <a href="javascript:;" class="fairy-class-item">上古三门</a>
+                <a href="javascript:;" class="fairy-class-item">最初的伙伴</a>
+                <a href="javascript:;" class="fairy-class-item">四海志</a>
+                <a href="javascript:;" class="fairy-class-item">四海志传奇</a>
+                <a href="javascript:;" class="fairy-class-item">古怪集</a>
+                <a href="javascript:;" class="fairy-class-item">古怪集传奇</a>
+                <a href="javascript:;" class="fairy-class-item">青丘录</a>
+                <a href="javascript:;" class="fairy-class-item">神武道</a>
+                <a href="javascript:;" class="fairy-class-item">英雄会</a>
             </div>
 
             <div class='fairy-pagination'>
@@ -268,7 +268,7 @@
                     <ul class="video-list">
                         <li class="video-0 ">
                             <img src="img/photo/32.jpg" alt="" />
-                            <a class="play-mask" href="#"></a>
+                            <a class="play-mask" href="javascript:;"></a>
                             <p class="video-tit">【御灵宝典】3擂台战打法技巧擂台战怎么打</p>
                         </li>
                         <li class="video-1 ">
@@ -521,58 +521,58 @@
         </div>
     </section>
 
-    <!--底部内容  -->
-    <div class="foot-wrap">
-        <h3 class='foot-tit spr text-hide'>更多精彩请关注我们</h3>
-        <ul class='contact-list'>
-            <li class='contact-bbs'>
-                <a href=""><span class='spr text-hide'>官方论坛</span></a>
-            </li>
-            <li class='contact-buluo'>
-                <a href=""><span class='spr text-hide'>兴趣部落</span></a>
-            </li>
-            <li class='contact-wxyxq'>
-                <img src="img/yxqqr.jpg" alt=""><span class='spr text-hide'>微信朋友圈</span>
-            </li>
-            <li class='contact-wx'>
-                <img src="img/wxqr.jpg" alt=""><span class='spr text-hide'>微信公众号</span>
-            </li>
-        </ul>
-        <div class="foot-list">
-            <ul class="list-cont">
-                <li class="list-item">
-                    <a href="#" target="_blank">腾讯互动娱乐</a>
-                    <span class="f_line">|</span>
-                    <a href="#" target="_blank">服务条款</a>
-                    <span class="f_line">|</span>
-                    <a href="#" target="_blank">腾讯游戏隐私保护指引</a>
-                    <span class="f_line">|</span>
-                    <a href="#" target="_blank">腾讯游戏招聘</a>
-                    <span class="f_line">|</span>
-                    <a href="#" target="_blank">腾讯游戏客服</a>
-                    <span class="f_line">|</span>
-                    <a href="#" target="_blank">游戏地图</a>
-                    <span class="f_line">|</span>
-                    <a href="#" target="_blank">商务合作</a>
-                    <span class="f_line">|</span>
-                    <a href="#" target="_blank">腾讯网</a>
-                    <span class="f_line">|</span>
-                    <a href="#" target="_blank">网站导航</a>
+     <!--底部内容  -->
+     <div class="foot-wrap">
+            <h3 class='foot-tit spr text-hide'>更多精彩请关注我们</h3>
+            <ul class='contact-list'>
+                <li class='contact-bbs'>
+                    <a href="javascript:;"><span class='spr text-hide'>官方论坛</span></a>
                 </li>
-                <li class="list-item">
-                    <a target="_blank" href="#">腾讯公司版权所有</a>
+                <li class='contact-buluo'>
+                    <a href="javascript:;"><span class='spr text-hide'>兴趣部落</span></a>
                 </li>
-                <li class="list-item">
-                    <a target="_blank" href="#">COPYRIGHT © 1998 - 2019 TENCENT. ALL RIGHTS RESERVED.</a>
+                <li class='contact-wxyxq'>
+                    <img src="img/yxqqr.jpg" alt=""><span class='spr text-hide'>微信朋友圈</span>
                 </li>
-                <li class="list-item">
-                    <a target="_blank" href="#">粤网文[2017]6138-1456号|（总）网出证（粤）字第057号</a>
+                <li class='contact-wx'>
+                    <img src="img/wxqr.jpg" alt=""><span class='spr text-hide'>微信公众号</span>
                 </li>
-
             </ul>
-            <p class="foot-h">仿：H-15159883705</p>
+            <div class="foot-list">
+                <ul class="list-cont">
+                    <li class="list-item">
+                        <a href="javascript:;" target="_blank">腾讯互动娱乐</a>
+                        <span class="f_line">|</span>
+                        <a href="javascript:;" target="_blank">服务条款</a>
+                        <span class="f_line">|</span>
+                        <a href="javascript:;" target="_blank">腾讯游戏隐私保护指引</a>
+                        <span class="f_line">|</span>
+                        <a href="javascript:;" target="_blank">腾讯游戏招聘</a>
+                        <span class="f_line">|</span>
+                        <a href="javascript:;" target="_blank">腾讯游戏客服</a>
+                        <span class="f_line">|</span>
+                        <a href="javascript:;" target="_blank">游戏地图</a>
+                        <span class="f_line">|</span>
+                        <a href="javascript:;" target="_blank">商务合作</a>
+                        <span class="f_line">|</span>
+                        <a href="javascript:;" target="_blank">腾讯网</a>
+                        <span class="f_line">|</span>
+                        <a href="javascript:;" target="_blank">网站导航</a>
+                    </li>
+                    <li class="list-item">
+                        <a target="_blank" href="javascript:;">腾讯公司版权所有</a>
+                    </li>
+                    <li class="list-item">
+                        <a target="_blank" href="javascript:;">COPYRIGHT © 1998 - 2019 TENCENT. ALL RIGHTS RESERVED.</a>
+                    </li>
+                    <li class="list-item">
+                        <a target="_blank" href="javascript:;">粤网文[2017]6138-1456号|（总）网出证（粤）字第057号</a>
+                    </li>
+    
+                </ul>
+                <p class="foot-h">仿：H-15159883705</p>
+            </div>
         </div>
-    </div>
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/index.js"></script>
