所有域名跨域

--- a/public/activity.html
+++ b/public/activity.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>活动中心</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/com.css">
+    <link rel="stylesheet" href="css/activity.css">
 </head>
 
 <body>
@@ -28,16 +30,29 @@
     <div class="inner-kv">
 
     </div>
-
+    <div class="inner-top clearfix">
+        <h2 class="inner-title tit-activity d-spr text-hide">活动中心</h2>
+    </div>
+    <!-- 主体部分 -->
+    <div class="inner-con inner-activity-list">
+        <ul class="act-list clearfix">
+            <li>
+                <a href="javascript:;" class="act-img">
+                    <img src="img/photo/ad-1.jpeg" alt="">
+                </a>
+                <a href="javascript:;" class="act-txt">风起云低，甘霖忽至——一起来捉妖新版本上线</a>
+            </li>
+        </ul>
+    </div>
     <!--底部内容  -->
     <div class="foot-wrap">
         <h3 class='foot-tit spr text-hide'>更多精彩请关注我们</h3>
         <ul class='contact-list'>
             <li class='contact-bbs'>
-                <a href=""><span class='spr text-hide'>官方论坛</span></a>
+                <a href="javascript:;"><span class='spr text-hide'>官方论坛</span></a>
             </li>
             <li class='contact-buluo'>
-                <a href=""><span class='spr text-hide'>兴趣部落</span></a>
+                <a href="javascript:;"><span class='spr text-hide'>兴趣部落</span></a>
             </li>
             <li class='contact-wxyxq'>
                 <img src="img/yxqqr.jpg" alt=""><span class='spr text-hide'>微信朋友圈</span>
