--- a/public/videos.html
+++ b/public/videos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>精彩视频</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/com.css">
     <link rel="stylesheet" href="css/videos.css">
 </head>
