--- a/public/strategy.html
+++ b/public/strategy.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>攻略中心</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/com.css">
     <link rel="stylesheet" href="css/news.css">
 </head>
@@ -35,14 +36,14 @@
     </div>
     <div class="inner-con inner-news-list inner-strategy-list">
         <div class="tab-c comm-tab">
-            <a href="" class='tab-prev prev spr text-hide'>上一个</a>
+            <a href="javascript:;" class='tab-prev prev spr text-hide'>上一个</a>
             <ul class='tab-hd'>
                 <li class='tab-item on'><a href="javascript:;" class='d-spr text-hide f-1-4 t-gfzy'>官方指引</a></li>
                 <li class='tab-item'><a href="javascript:;" class='d-spr text-hide f-1-4 t-xszy'>新手指南</a></li>
                 <li class='tab-item'><a href="javascript:;" class='d-spr text-hide f-1-4 t-hdwf'>活动玩法</a></li>
                 <li class='tab-item'><a href="javascript:;" class='d-spr text-hide f-1-4 t-spgl'>御灵攻略</a></li>
             </ul>
-            <a href="" class='tab-next next spr text-hide'>下一个</a>
+            <a href="javascript:;" class='tab-next next spr text-hide'>下一个</a>
         </div>
         <div class="grid-tab-bd">
             <div class="tab-panel" id='strategy-item'>
@@ -111,7 +112,7 @@
     })
     function newAjax(state_sort){
         $.ajax({
-            url:'/strategy/all',
+            url:'http://127.0.0.1:3000/strategy/all',
             data:{
                 state_sort
             },
